# esp-idf

./: .gitmodules
.gitlab/ci/: rules.yml
components/driver/gpio/: gpio.c  rtc_io.c
components/driver/gpio/include/driver/: gpio.h  rtc_io.h
components/hal/: rtc_io_hal.c
components/hal/esp32c3/include/hal/: gpio_ll.h
components/hal/esp32s3/include/hal/: gpio_ll.h  rtc_io_ll.h
components/hal/include/hal/: gpio_hal.h  rtc_io_hal.h
components/soc/esp32c3/include/soc/: io_mux_reg.h
components/soc/esp32s3/include/soc/: io_mux_reg.h
components/ulp/: Kconfig  project_include.cmake
components/ulp/cmake/: CMakeLists.txt  toolchain-lp-core-riscv.cmake  toolchain-ulp-riscv.cmake
components/ulp/ld/: lp_core_riscv.ld  ulp_riscv.ld
components/ulp/lp_core/lp_core/: lp_core_interrupt.c  lp_core_panic.c  lp_core_print.c  lp_core_utils.c  vector.S
components/ulp/lp_core/lp_core/freertos/: CMakeLists.txt
components/ulp/lp_core/lp_core/freertos/config/: FreeRTOSConfig.h
components/ulp/lp_core/lp_core/freertos/port/: port.c  portASM.S  portContext.h
components/ulp/lp_core/lp_core/include/: ulp_lp_core_print.h
components/ulp/ulp_riscv/ulp_core/: start.S
tools/ci/: check_copyright_config.yaml
